5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1734_2496.log
== TEST (2019-05-09 18:17:02) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(n != 1):
	cont = cont + 1
	print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(n != 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:17:13) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != 1):
	cont = cont + 1
	print(num)
-- OUTPUT:
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:17:36) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != 1):
	cont = cont + 1
	print(num)
	num = float(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:18:02) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != 1):
	print(num)
	cont = cont + 1
	num = float(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:18:27) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != 1):
	print(num)
	cont = cont + 1
num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:19:13) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	print(num)
	cont = cont + 1
num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
-525.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:20:25) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	print(num)
	cont = cont + 1	
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
1075.0
333.0
-9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:21:16) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	print(num)
	cont = cont + 1	
	num = float(input("Digite um numero: "))
	print(cont)
-- OUTPUT:
-525.0
1
1075.0
2
333.0
3
-9.0
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:22:02) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	print(num)
	cont = cont + 1	
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
1075.0
333.0
-9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:22:47) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	print(num)
	cont = cont + cont
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
1075.0
333.0
-9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:24:00) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:24:31) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:24:40) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:16) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont + 1
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
1
3
7
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:26:24) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont + 1
	print(cont)
	num = float(input("Digite um numero: "))
-- EXECUTION TIME:
0.140391
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1
3
7
15
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
3
7
15
31
63
127
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
1
3
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:26) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont + 1
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
1
3
7
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:27:02) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + 1
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
1
2
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:27:35) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont + 1
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
1
3
7
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:29:33) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + con
	print(cont)
	num = float(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    cont = cont + con
NameError: name 'con' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:29:41) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:29:54) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + cont
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:30:58) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:31:05) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- EXECUTION TIME:
0.196155
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525.0
550.0
883.0
874.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953.0
43606.0
32653.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:31:07) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:32:09) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:32:21) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- EXECUTION TIME:
0.221234
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525.0
550.0
883.0
874.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953.0
43606.0
32653.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:33:18) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1 and cont != 1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:33:27) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:35:00) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	num = float(input("Digite um numero: "))
print(cont)
-- OUTPUT:
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:35:11) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
num = float(input("Digite um numero: "))

-- OUTPUT:
-525.0
-1050.0
-1575.0
-2100.0
-2625.0
-3150.0
-3675.0
-4200.0
-4725.0
-5250.0
-5775.0
-6300.0
-6825.0
-7350.0
-7875.0
-8400.0
-8925.0
-9450.0
-9975.0
-10500.0
-11025.0
-11550.0
-12075.0
-12600.0
-13125.0
-13650.0
-14175.0
-14700.0
-15225.0
-15750.0
-16275.0
-16800.0
-17325.0
-17850.0
-18375.0
-18900.0
-19425.0
-19950.0
-20475.0
-21000.0
-21525.0
-22050.0
-22575.0
-23100.0
-23625.0
-24150.0
-24675.0
-25200.0
-25725.0
-26250.0
-26775.0
-27300.0
-27825.0
-28350.0
-28875.0
-29400.0
-29925.0
-30450.0
-30975.0
-31500.0
-32025.0
-32550.0
-33075.0
-33600.0
-34125.0
-34650.0
-35175.0
-35700.0
-36225.0
-36750.0
-37275.0
-37800.0
-38325.0
-38850.0
-39375.0
-39900.0
-40425.0
-40950.0
-41475.0
-42000.0
-42525.0
-43050.0
-43575.0
-44100.0
-44625.0
-45150.0
-45675.0
-46200.0
-46725.0
-47250.0
-47775.0
-48300.0
-48825.0
-49350.0
-49875.0
-50400.0
-50925.0
-51450.0
-51975.0
-52500.0
-53025.0
-53550.0
-54075.0
-54600.0
-55125.0
-55650.0
-56175.0
-56700.0
-57225.0
-57750.0
-58275.0
-58800.0
-59325.0
-59
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:35:57) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	print(cont)
	num = float(input("Digite um numero: "))

-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:37:48) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	num = float(input("Digite um numero: "))
		print(cont)

-- ERROR:
File "XXXX", line 6
    print(cont)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:37:54) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	num = float(input("Digite um numero: "))
	print(cont)

-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:38:08) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	num = float(input("Digite um numero: "))
print(cont)

-- OUTPUT:
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:38:19) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	num = float(input("Digite um numero: "))
print(cont)

-- OUTPUT:
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:38:25) 
-- CODE:
num = float(input("Digite um numero: "))
cont = 0
while(num != -1):
	cont = cont + num
	num = float(input("Digite um numero: "))
print(cont)

-- EXECUTION TIME:
0.120113
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
